--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
   <dependencies>
 
     <dependency>
+      <groupId>ashokit</groupId>
+      <artifactId>java</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
